--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,10 @@ cycler==0.12.1
 cython==3.2.3
 dnspython==2.8.0
 easydict==1.13
+filelock==3.20.1
 flatbuffers==25.12.19
 fonttools==4.61.1
+fsspec==2025.12.0
 gitdb==4.0.12
 gitpython==3.1.45
 google-crc32c==1.8.0
@@ -85,6 +87,8 @@ tenacity==9.1.2
 threadpoolctl==3.6.0
 tifffile==2025.5.10
 toml==0.10.2
+torch==2.9.1
+torchvision==0.24.1
 tornado==6.5.4
 tqdm==4.67.1
 typing-extensions==4.15.0
